--- a/fuzzers/binary_only/tinyinst_simple/Cargo.toml
+++ b/fuzzers/binary_only/tinyinst_simple/Cargo.toml
@@ -10,6 +10,8 @@ libafl_tinyinst = { path = "../../../libafl_tinyinst" }
 log = { version = "0.4.22", features = ["release_max_level_info"] }
 clap = { version = "4.0", features = ["derive"] }
 ctrlc = "3.2"
+env_logger = "0.11.8"
+
 
 [profile.release]
 codegen-units = 1
