--- a/fuzzers/binary_only/tinyinst_simple/Cargo.toml
+++ b/fuzzers/binary_only/tinyinst_simple/Cargo.toml
@@ -11,7 +11,7 @@ log = { version = "0.4.22", features = ["release_max_level_info"] }
 clap = { version = "4.0", features = ["derive"] }
 ctrlc = "3.2"
 env_logger = "0.11.8"
-
+rand = "0.9.0"
 
 [profile.release]
 codegen-units = 1
